objects/vlocity_cmt__CalculationMatrixRow__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__CalculationMatrixVersionId__c</fullName>
        <label>Vlocity Calculation Matrix Version</label>
        <referenceTo>vlocity_cmt__CalculationMatrixVersion__c</referenceTo>
        <relationshipName>Vlocity_Calculation_Table_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <description>The globally unique identifier of the matrix row. Used to identify the matrix row across Salesforce instances.</description>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__HashKey__c</fullName>
        <label>Hash Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__InputData__c</fullName>
        <label>Input Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OutputData__c</fullName>
        <label>OutputData</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Vlocity Calculation Matrix Row</label>
    <nameField>
        <label>Input Data MD5 Hash</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Calculation Matrix Rows</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>